nullaway_error_DA654453-41CC-408D-9716-CDB6A12EFD62.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/event/EventListenerMethodProcessor.java:115: error: [NullAway] dereferenced expression beanFactory is @Nullable
		String[] beanNames = beanFactory.getBeanNamesForType(Object.class);
		                                ^
    (see http://t.uber.com/nullaway )
